tests/invalid/imported_mode.err_exp2
Mercury/ints/exported_mode.int:003: Error: mode declaration for predicate
Mercury/ints/exported_mode.int:003:   `exported_mode.p/2'
Mercury/ints/exported_mode.int:003:   without preceding `pred' declaration.
Mercury/ints/exported_mode.int:003: Inferred :- pred p(T1, T2).
